--- a/app1/templates/app1/show.html
+++ b/app1/templates/app1/show.html
@@ -40,9 +40,10 @@
     <label class="col-sm-1 col-form-label"></label>  
     <div class="col-sm-4">  
     <button type="submit" class="btn btn-success">DELETE</button>
-    </div>  
+    </div>
   </div>  
     </div>  
-</form>  
+</form>
+<a href="/app1/update/{{ card.id }}">EDIT</a>
 </body>  
 </html>
